# openai-genapi

./: openai.cabal  stack.yaml
src/: OpenAI.hs
src/OpenAI/: Common.hs  Configuration.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
src/OpenAI/Operations/: CancelFineTuningJob.hs  CancelRun.hs  CreateAssistant.hs  CreateAssistantFile.hs  CreateChatCompletion.hs  CreateCompletion.hs  CreateEmbedding.hs  CreateFile.hs  CreateFineTuningJob.hs  CreateImage.hs  CreateImageEdit.hs  CreateImageVariation.hs  CreateMessage.hs  CreateModeration.hs  CreateRun.hs  CreateSpeech.hs  CreateThread.hs  CreateThreadAndRun.hs  CreateTranscription.hs  CreateTranslation.hs  DeleteAssistant.hs  DeleteAssistantFile.hs  DeleteFile.hs  DeleteModel.hs  DeleteThread.hs  DownloadFile.hs  GetAssistant.hs  GetAssistantFile.hs  GetMessage.hs  GetMessageFile.hs  GetRun.hs  GetRunStep.hs  GetThread.hs  ListAssistantFiles.hs  ListAssistants.hs  ListFiles.hs  ListFineTuningEvents.hs  ListMessageFiles.hs  ListMessages.hs  ListModels.hs  (+11 more)
src/OpenAI/Types/: AssistantFileObject.hs  AssistantFileObject.hs-boot  AssistantObject.hs  AssistantObject.hs-boot  AssistantToolsCode.hs  AssistantToolsCode.hs-boot  AssistantToolsFunction.hs  AssistantToolsFunction.hs-boot  AssistantToolsRetrieval.hs  AssistantToolsRetrieval.hs-boot  ChatCompletionFunctionCallOption.hs  ChatCompletionFunctionCallOption.hs-boot  ChatCompletionFunctions.hs  ChatCompletionFunctions.hs-boot  ChatCompletionMessageToolCall.hs  ChatCompletionMessageToolCall.hs-boot  ChatCompletionNamedToolChoice.hs  ChatCompletionNamedToolChoice.hs-boot  ChatCompletionRequestAssistantMessage.hs  ChatCompletionRequestAssistantMessage.hs-boot  ChatCompletionRequestFunctionMessage.hs  ChatCompletionRequestFunctionMessage.hs-boot  ChatCompletionRequestMessage.hs  ChatCompletionRequestMessage.hs-boot  ChatCompletionRequestMessageContentPart.hs  ChatCompletionRequestMessageContentPart.hs-boot  ChatCompletionRequestMessageContentPartImage.hs  ChatCompletionRequestMessageContentPartImage.hs-boot  ChatCompletionRequestMessageContentPartText.hs  ChatCompletionRequestMessageContentPartText.hs-boot  ChatCompletionRequestSystemMessage.hs  ChatCompletionRequestSystemMessage.hs-boot  ChatCompletionRequestToolMessage.hs  ChatCompletionRequestToolMessage.hs-boot  ChatCompletionRequestUserMessage.hs  ChatCompletionRequestUserMessage.hs-boot  ChatCompletionResponseMessage.hs  ChatCompletionResponseMessage.hs-boot  ChatCompletionTokenLogprob.hs  ChatCompletionTokenLogprob.hs-boot  (+138 more)
